--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#What-attributes-have-been-discovered?\" data-toc-modified-id=\"What-attributes-have-been-discovered?-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>What attributes have been discovered?</a></span></li><li><span><a href=\"#Features\" data-toc-modified-id=\"Features-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Accessing-coordinate-variables\" data-toc-modified-id=\"Accessing-coordinate-variables-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Accessing coordinate variables</a></span></li><li><span><a href=\"#Rewriting-arguments\" data-toc-modified-id=\"Rewriting-arguments-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Rewriting arguments</a></span><ul class=\"toc-item\"><li><span><a href=\"#Slicing\" data-toc-modified-id=\"Slicing-2.2.1\"><span class=\"toc-item-num\">2.2.1&nbsp;&nbsp;</span>Slicing</a></span></li><li><span><a href=\"#Plotting\" data-toc-modified-id=\"Plotting-2.2.2\"><span class=\"toc-item-num\">2.2.2&nbsp;&nbsp;</span>Plotting</a></span></li><li><span><a href=\"#Resample-&amp;-groupby\" data-toc-modified-id=\"Resample-&amp;-groupby-2.2.3\"><span class=\"toc-item-num\">2.2.3&nbsp;&nbsp;</span>Resample &amp; groupby</a></span></li><li><span><a href=\"#Rolling-&amp;-coarsen\" data-toc-modified-id=\"Rolling-&amp;-coarsen-2.2.4\"><span class=\"toc-item-num\">2.2.4&nbsp;&nbsp;</span>Rolling &amp; coarsen</a></span></li><li><span><a href=\"#miscellaneous-features\" data-toc-modified-id=\"miscellaneous-features-2.2.5\"><span class=\"toc-item-num\">2.2.5&nbsp;&nbsp;</span>miscellaneous features</a></span></li></ul></li><li><span><a href=\"#Augmented-functionality\" data-toc-modified-id=\"Augmented-functionality-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Augmented functionality</a></span><ul class=\"toc-item\"><li><span><a href=\"#Cell-Measures\" data-toc-modified-id=\"Cell-Measures-2.3.1\"><span class=\"toc-item-num\">2.3.1&nbsp;&nbsp;</span>Cell Measures</a></span></li></ul></li></ul></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a brief introduction to `cf_xarray`'s capabilities."
+    "# Introduction to `cf_xarray`\n",
+    "\n",
+    "This notebook is a brief introduction to `cf_xarray`'s current capabilities."
    ]
   },
   {
@@ -95,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What attributes have been discovered?"
+    "## What attributes have been discovered?"
    ]
   },
   {
@@ -160,14 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Accessing coordinate variables\n",
+    "## Feature: Accessing coordinate variables\n",
     "\n",
     "`.cf` implements `__getitem__` to allow easy access to coordinate and axis variables."
    ]
@@ -232,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rewriting arguments\n",
+    "## Feature: Rewriting arguments\n",
     "\n",
     "`cf_xarray` can rewrite arguments for a large number of xarray functions. By this I mean that instead of specifing say `dim=\"lon\"`, you can pass `dim=\"X\"` or `dim=\"longitude\"` and `cf_xarray` will rewrite that to `dim=\"lon\"` based on the attributes present in the dataset. \n",
     "\n",
@@ -381,16 +366,16 @@
     }
    },
    "source": [
-    "coarsen works but eberything later will break because of xarray bug https://github.com/pydata/xarray/issues/4120\n",
+    "``coarsen`` works but everything later will break because of xarray bug https://github.com/pydata/xarray/issues/4120\n",
     "\n",
-    "ds.isel(lon=slice(50)).cf.coarsen(Y=5, X=10).mean()"
+    "``ds.isel(lon=slice(50)).cf.coarsen(Y=5, X=10).mean()``"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### miscellaneous features\n",
+    "#### miscellaneous features\n",
     "\n",
     "You can mix \"special names\" and variable names"
    ]
@@ -413,9 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Augmented functionality\n",
-    "\n",
-    "### Cell Measures\n",
+    "## Feature: Weight by Cell Measures\n",
     "\n",
     "`cf_xarray` can weight by cell measure variables `\"area\"` and `\"volume\"` if the appropriate attribute is set"
    ]
