Update example to show selection along multiple dims.

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -80,7 +80,32 @@
     "    (\"nlat\", \"nlon\"),\n",
     "    np.ones((20, 30)) * 15,\n",
     "    {\"coordinates\": \"TLONG TLAT\"},\n",
-    ")\n"
+    ")\n",
+    "pop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This synthetic dataset has multiple `X` and `Y` coords. An example would be model output on a staggered grid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiple = xr.Dataset()\n",
+    "multiple.coords[\"x1\"] = (\"x1\", range(30), {\"axis\": \"X\"})\n",
+    "multiple.coords[\"y1\"] = (\"y1\", range(20), {\"axis\": \"Y\"})\n",
+    "multiple.coords[\"x2\"] = (\"x2\", range(10), {\"axis\": \"X\"})\n",
+    "multiple.coords[\"y2\"] = (\"y2\", range(5), {\"axis\": \"Y\"})\n",
+    "\n",
+    "multiple[\"v1\"] = ((\"x1\", \"y1\"), np.ones((30, 20)) * 15)\n",
+    "multiple[\"v2\"] = ((\"x2\", \"y2\"), np.ones((10, 5)) * 15)\n",
+    "multiple"
    ]
   },
   {
@@ -146,6 +171,22 @@
    "outputs": [],
    "source": [
     "pop.cf.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For `multiple`, multiple `X` and `Y` coordinates are detected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiple.cf.describe()"
    ]
   },
   {
@@ -243,6 +284,22 @@
    "outputs": [],
    "source": [
     "ds.air.cf.isel(T=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing works will expand a single key like `X` to multiple dimensions if those dimensions are tagged with `axis: X`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiple.cf.isel(X=1, Y=1)"
    ]
   },
   {
