Support multiple axes in reductions.

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction-to-cf_xarray\" data-toc-modified-id=\"Introduction-to-cf_xarray-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction to <code>cf_xarray</code></a></span><ul class=\"toc-item\"><li><span><a href=\"#What-attributes-have-been-discovered?\" data-toc-modified-id=\"What-attributes-have-been-discovered?-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>What attributes have been discovered?</a></span></li><li><span><a href=\"#Feature:-Accessing-coordinate-variables\" data-toc-modified-id=\"Feature:-Accessing-coordinate-variables-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Feature: Accessing coordinate variables</a></span></li><li><span><a href=\"#Feature:-Rewriting-arguments\" data-toc-modified-id=\"Feature:-Rewriting-arguments-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Feature: Rewriting arguments</a></span><ul class=\"toc-item\"><li><span><a href=\"#Slicing\" data-toc-modified-id=\"Slicing-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Slicing</a></span></li><li><span><a href=\"#Reductions\" data-toc-modified-id=\"Reductions-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Reductions</a></span></li><li><span><a href=\"#Plotting\" data-toc-modified-id=\"Plotting-1.3.3\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span>Plotting</a></span></li><li><span><a href=\"#Resample-&amp;-groupby\" data-toc-modified-id=\"Resample-&amp;-groupby-1.3.4\"><span class=\"toc-item-num\">1.3.4&nbsp;&nbsp;</span>Resample &amp; groupby</a></span></li><li><span><a href=\"#Rolling-&amp;-coarsen\" data-toc-modified-id=\"Rolling-&amp;-coarsen-1.3.5\"><span class=\"toc-item-num\">1.3.5&nbsp;&nbsp;</span>Rolling &amp; coarsen</a></span><ul class=\"toc-item\"><li><span><a href=\"#miscellaneous-features\" data-toc-modified-id=\"miscellaneous-features-1.3.5.1\"><span class=\"toc-item-num\">1.3.5.1&nbsp;&nbsp;</span>miscellaneous features</a></span></li></ul></li></ul></li><li><span><a href=\"#Feature:-Weight-by-Cell-Measures\" data-toc-modified-id=\"Feature:-Weight-by-Cell-Measures-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Feature: Weight by Cell Measures</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Introduction to `cf_xarray`\n",
@@ -14,8 +24,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:35:44.967831Z",
-     "start_time": "2020-06-12T20:35:44.943306Z"
+     "end_time": "2020-06-19T16:44:52.277430Z",
+     "start_time": "2020-06-19T16:44:51.354881Z"
     }
    },
    "outputs": [],
@@ -37,8 +47,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:33:37.322927Z",
-     "start_time": "2020-06-12T20:33:37.262000Z"
+     "end_time": "2020-06-19T16:44:52.331138Z",
+     "start_time": "2020-06-19T16:44:52.279190Z"
     }
    },
    "outputs": [],
@@ -59,8 +69,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:40:55.378756Z",
-     "start_time": "2020-06-12T20:40:55.338717Z"
+     "end_time": "2020-06-19T16:44:52.399087Z",
+     "start_time": "2020-06-19T16:44:52.333063Z"
     }
    },
    "outputs": [],
@@ -94,7 +104,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-19T16:44:52.449912Z",
+     "start_time": "2020-06-19T16:44:52.400460Z"
+    }
+   },
    "outputs": [],
    "source": [
     "multiple = xr.Dataset()\n",
@@ -120,8 +135,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:25:12.597651Z",
-     "start_time": "2020-06-12T20:25:12.554432Z"
+     "end_time": "2020-06-19T16:44:52.480112Z",
+     "start_time": "2020-06-19T16:44:52.451337Z"
     }
    },
    "outputs": [],
@@ -143,8 +158,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:27:09.803560Z",
-     "start_time": "2020-06-12T20:27:09.770516Z"
+     "end_time": "2020-06-19T16:44:52.498434Z",
+     "start_time": "2020-06-19T16:44:52.481531Z"
     }
    },
    "outputs": [],
@@ -164,8 +179,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:41:54.117735Z",
-     "start_time": "2020-06-12T20:41:54.087549Z"
+     "end_time": "2020-06-19T16:44:52.522360Z",
+     "start_time": "2020-06-19T16:44:52.500354Z"
     }
    },
    "outputs": [],
@@ -183,7 +198,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-19T16:44:52.553921Z",
+     "start_time": "2020-06-19T16:44:52.526299Z"
+    }
+   },
    "outputs": [],
    "source": [
     "multiple.cf.describe()"
@@ -203,8 +223,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:41:57.554031Z",
-     "start_time": "2020-06-12T20:41:57.504506Z"
+     "end_time": "2020-06-19T16:44:52.575193Z",
+     "start_time": "2020-06-19T16:44:52.555069Z"
     }
    },
    "outputs": [],
@@ -224,8 +244,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:42:02.439458Z",
-     "start_time": "2020-06-12T20:42:02.364630Z"
+     "end_time": "2020-06-19T16:44:52.608225Z",
+     "start_time": "2020-06-19T16:44:52.576642Z"
     }
    },
    "outputs": [],
@@ -245,8 +265,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:43:09.230608Z",
-     "start_time": "2020-06-12T20:43:09.189175Z"
+     "end_time": "2020-06-19T16:44:52.640868Z",
+     "start_time": "2020-06-19T16:44:52.609404Z"
     }
    },
    "outputs": [],
@@ -277,8 +297,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:28:53.616306Z",
-     "start_time": "2020-06-12T20:28:53.562495Z"
+     "end_time": "2020-06-19T16:44:52.677400Z",
+     "start_time": "2020-06-19T16:44:52.641979Z"
     }
    },
    "outputs": [],
@@ -296,10 +316,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-19T16:44:52.700101Z",
+     "start_time": "2020-06-19T16:44:52.679004Z"
+    }
+   },
    "outputs": [],
    "source": [
     "multiple.cf.isel(X=1, Y=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reductions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-19T16:44:52.749269Z",
+     "start_time": "2020-06-19T16:44:52.701198Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ds.air.cf.mean(\"X\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Expanding to multiple dimensions is also supported"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-19T16:44:52.777454Z",
+     "start_time": "2020-06-19T16:44:52.750613Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# takes the mean along [\"x1\", \"x2\"]\n",
+    "multiple.cf.mean(\"X\")"
    ]
   },
   {
@@ -314,8 +382,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:28:59.835481Z",
-     "start_time": "2020-06-12T20:28:59.603378Z"
+     "end_time": "2020-06-19T16:44:53.214185Z",
+     "start_time": "2020-06-19T16:44:52.779161Z"
     }
    },
    "outputs": [],
@@ -328,8 +396,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:30:26.160180Z",
-     "start_time": "2020-06-12T20:30:25.980074Z"
+     "end_time": "2020-06-19T16:44:53.396332Z",
+     "start_time": "2020-06-19T16:44:53.216108Z"
     }
    },
    "outputs": [],
@@ -349,8 +417,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:49:14.502662Z",
-     "start_time": "2020-06-12T20:49:14.002534Z"
+     "end_time": "2020-06-19T16:44:53.937352Z",
+     "start_time": "2020-06-19T16:44:53.397781Z"
     }
    },
    "outputs": [],
@@ -370,8 +438,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:29:50.966391Z",
-     "start_time": "2020-06-12T20:29:50.317513Z"
+     "end_time": "2020-06-19T16:44:54.577478Z",
+     "start_time": "2020-06-19T16:44:53.938825Z"
     }
    },
    "outputs": [],
@@ -384,8 +452,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:30:55.508515Z",
-     "start_time": "2020-06-12T20:30:55.433502Z"
+     "end_time": "2020-06-19T16:44:54.644922Z",
+     "start_time": "2020-06-19T16:44:54.578741Z"
     }
    },
    "outputs": [],
@@ -405,8 +473,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:31:11.369963Z",
-     "start_time": "2020-06-12T20:31:11.240738Z"
+     "end_time": "2020-06-19T16:44:54.690873Z",
+     "start_time": "2020-06-19T16:44:54.646190Z"
     }
    },
    "outputs": [],
@@ -442,8 +510,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:34:38.685926Z",
-     "start_time": "2020-06-12T20:34:38.627758Z"
+     "end_time": "2020-06-19T16:44:54.750667Z",
+     "start_time": "2020-06-19T16:44:54.693023Z"
     }
    },
    "outputs": [],
@@ -465,8 +533,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:47:31.384370Z",
-     "start_time": "2020-06-12T20:47:31.347731Z"
+     "end_time": "2020-06-19T16:44:54.771517Z",
+     "start_time": "2020-06-19T16:44:54.752078Z"
     }
    },
    "outputs": [],
@@ -487,8 +555,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-12T20:47:08.559480Z",
-     "start_time": "2020-06-12T20:47:08.371283Z"
+     "end_time": "2020-06-19T16:44:54.961814Z",
+     "start_time": "2020-06-19T16:44:54.772773Z"
     }
    },
    "outputs": [],
