--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction-to-cf_xarray\" data-toc-modified-id=\"Introduction-to-cf_xarray-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction to <code>cf_xarray</code></a></span><ul class=\"toc-item\"><li><span><a href=\"#What-attributes-have-been-discovered?\" data-toc-modified-id=\"What-attributes-have-been-discovered?-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>What attributes have been discovered?</a></span></li><li><span><a href=\"#Feature:-Accessing-coordinate-variables\" data-toc-modified-id=\"Feature:-Accessing-coordinate-variables-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Feature: Accessing coordinate variables</a></span></li><li><span><a href=\"#Feature:-Rewriting-arguments\" data-toc-modified-id=\"Feature:-Rewriting-arguments-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Feature: Rewriting arguments</a></span><ul class=\"toc-item\"><li><span><a href=\"#Slicing\" data-toc-modified-id=\"Slicing-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Slicing</a></span></li><li><span><a href=\"#Reductions\" data-toc-modified-id=\"Reductions-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Reductions</a></span></li><li><span><a href=\"#Plotting\" data-toc-modified-id=\"Plotting-1.3.3\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span>Plotting</a></span></li><li><span><a href=\"#Resample-&amp;-groupby\" data-toc-modified-id=\"Resample-&amp;-groupby-1.3.4\"><span class=\"toc-item-num\">1.3.4&nbsp;&nbsp;</span>Resample &amp; groupby</a></span></li><li><span><a href=\"#Rolling-&amp;-coarsen\" data-toc-modified-id=\"Rolling-&amp;-coarsen-1.3.5\"><span class=\"toc-item-num\">1.3.5&nbsp;&nbsp;</span>Rolling &amp; coarsen</a></span><ul class=\"toc-item\"><li><span><a href=\"#miscellaneous-features\" data-toc-modified-id=\"miscellaneous-features-1.3.5.1\"><span class=\"toc-item-num\">1.3.5.1&nbsp;&nbsp;</span>miscellaneous features</a></span></li></ul></li></ul></li><li><span><a href=\"#Feature:-Weight-by-Cell-Measures\" data-toc-modified-id=\"Feature:-Weight-by-Cell-Measures-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Feature: Weight by Cell Measures</a></span></li></ul></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Introduction to `cf_xarray`\n",
@@ -24,8 +14,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.277430Z",
-     "start_time": "2020-06-19T16:44:51.354881Z"
+     "end_time": "2020-06-30T23:25:30.534525Z",
+     "start_time": "2020-06-30T23:25:29.588662Z"
     }
    },
    "outputs": [],
@@ -47,13 +37,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.331138Z",
-     "start_time": "2020-06-19T16:44:52.279190Z"
+     "end_time": "2020-06-30T23:25:30.589498Z",
+     "start_time": "2020-06-30T23:25:30.536512Z"
     }
    },
    "outputs": [],
    "source": [
     "ds = xr.tutorial.load_dataset(\"air_temperature\")\n",
+    "ds.air.attrs[\"standard_name\"] = \"air_temperature\"\n",
     "ds"
    ]
   },
@@ -69,8 +60,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.399087Z",
-     "start_time": "2020-06-19T16:44:52.333063Z"
+     "end_time": "2020-06-30T23:25:30.651949Z",
+     "start_time": "2020-06-30T23:25:30.591221Z"
     }
    },
    "outputs": [],
@@ -84,12 +75,12 @@
     "pop[\"UVEL\"] = (\n",
     "    (\"nlat\", \"nlon\"),\n",
     "    np.ones((20, 30)) * 15,\n",
-    "    {\"coordinates\": \"ULONG ULAT\"},\n",
+    "    {\"coordinates\": \"ULONG ULAT\", \"standard_name\": \"sea_water_x_velocity\"},\n",
     ")\n",
     "pop[\"TEMP\"] = (\n",
     "    (\"nlat\", \"nlon\"),\n",
     "    np.ones((20, 30)) * 15,\n",
-    "    {\"coordinates\": \"TLONG TLAT\"},\n",
+    "    {\"coordinates\": \"TLONG TLAT\", \"standard_name\": \"sea_water_potential_temperature\"},\n",
     ")\n",
     "pop"
    ]
@@ -106,8 +97,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.449912Z",
-     "start_time": "2020-06-19T16:44:52.400460Z"
+     "end_time": "2020-06-30T23:25:30.702175Z",
+     "start_time": "2020-06-30T23:25:30.653445Z"
     }
    },
    "outputs": [],
@@ -124,6 +115,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T23:25:30.738840Z",
+     "start_time": "2020-06-30T23:25:30.703397Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# This dataset has ancillary variables\n",
+    "\n",
+    "anc = xr.Dataset()\n",
+    "anc[\"q\"] = (\n",
+    "    (\"x\", \"y\"),\n",
+    "    np.random.randn(10, 20),\n",
+    "    dict(\n",
+    "        standard_name=\"specific_humidity\",\n",
+    "        units=\"g/g\",\n",
+    "        ancillary_variables=\"q_error_limit q_detection_limit\",\n",
+    "    ),\n",
+    ")\n",
+    "anc[\"q_error_limit\"] = (\n",
+    "    (\"x\", \"y\"),\n",
+    "    np.random.randn(10, 20),\n",
+    "    dict(standard_name=\"specific_humidity standard_error\", units=\"g/g\"),\n",
+    ")\n",
+    "anc[\"q_detection_limit\"] = xr.DataArray(\n",
+    "    1e-3, attrs=dict(standard_name=\"specific_humidity detection_minimum\", units=\"g/g\"),\n",
+    ")\n",
+    "anc"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,8 +160,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.480112Z",
-     "start_time": "2020-06-19T16:44:52.451337Z"
+     "end_time": "2020-06-30T23:25:30.765720Z",
+     "start_time": "2020-06-30T23:25:30.740611Z"
     }
    },
    "outputs": [],
@@ -158,8 +183,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.498434Z",
-     "start_time": "2020-06-19T16:44:52.481531Z"
+     "end_time": "2020-06-30T23:25:30.784623Z",
+     "start_time": "2020-06-30T23:25:30.766855Z"
     }
    },
    "outputs": [],
@@ -179,8 +204,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.522360Z",
-     "start_time": "2020-06-19T16:44:52.500354Z"
+     "end_time": "2020-06-30T23:25:30.808990Z",
+     "start_time": "2020-06-30T23:25:30.786547Z"
     }
    },
    "outputs": [],
@@ -200,8 +225,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.553921Z",
-     "start_time": "2020-06-19T16:44:52.526299Z"
+     "end_time": "2020-06-30T23:25:30.831925Z",
+     "start_time": "2020-06-30T23:25:30.811491Z"
     }
    },
    "outputs": [],
@@ -223,13 +248,43 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.575193Z",
-     "start_time": "2020-06-19T16:44:52.555069Z"
+     "end_time": "2020-06-30T23:25:30.853404Z",
+     "start_time": "2020-06-30T23:25:30.833017Z"
     }
    },
    "outputs": [],
    "source": [
     "ds.cf[\"X\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T23:25:30.874348Z",
+     "start_time": "2020-06-30T23:25:30.854712Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Dataset always return Datasets since there can be multiple x variables\n",
+    "ds.cf[\"X\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T23:25:30.908034Z",
+     "start_time": "2020-06-30T23:25:30.875711Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "multiple.cf[\"X\"]"
    ]
   },
   {
@@ -244,20 +299,21 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.608225Z",
-     "start_time": "2020-06-19T16:44:52.576642Z"
+     "end_time": "2020-06-30T23:25:30.938350Z",
+     "start_time": "2020-06-30T23:25:30.909227Z"
     }
    },
    "outputs": [],
    "source": [
-    "pop.cf[\"longitude\"]"
+    "# DataArrays return DataArrays\n",
+    "pop.UVEL.cf[\"longitude\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`DataArray.cf[...]` returns a single `DataArray`, parsing the `coordinates` attribute if present, so we correctly get the `TLONG` variable and not the `ULONG` variable"
+    "`Dataset.cf[...]` returns a single `DataArray`, parsing the `coordinates` attribute if present, so we correctly get the `TLONG` variable and not the `ULONG` variable"
    ]
   },
   {
@@ -265,13 +321,94 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.640868Z",
-     "start_time": "2020-06-19T16:44:52.609404Z"
+     "end_time": "2020-06-30T23:25:30.999763Z",
+     "start_time": "2020-06-30T23:25:30.939502Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pop.cf[\"TEMP\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Dataset.cf[...]` also interprets the `ancillary_variables` attribute. The ancillary variables are returned as coordinates of a DataArray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T23:25:31.050027Z",
+     "start_time": "2020-06-30T23:25:31.000741Z"
     }
    },
    "outputs": [],
    "source": [
-    "pop.TEMP.cf[\"longitude\"]"
+    "anc.cf[\"q\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature: Accessing variables by standard names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T23:25:31.150885Z",
+     "start_time": "2020-06-30T23:25:31.052008Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pop.cf[[\"sea_water_potential_temperature\", \"UVEL\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T23:25:31.185257Z",
+     "start_time": "2020-06-30T23:25:31.152549Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "anc.cf[\"specific_humidity\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature: Utility functions\n",
+    "\n",
+    "\n",
+    "There are some utility functions to allow use by downstream libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T23:25:31.205009Z",
+     "start_time": "2020-06-30T23:25:31.186385Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pop.cf.get_valid_keys()"
    ]
   },
   {
@@ -297,8 +434,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.677400Z",
-     "start_time": "2020-06-19T16:44:52.641979Z"
+     "end_time": "2020-06-30T23:25:31.241228Z",
+     "start_time": "2020-06-30T23:25:31.206075Z"
     }
    },
    "outputs": [],
@@ -318,8 +455,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.700101Z",
-     "start_time": "2020-06-19T16:44:52.679004Z"
+     "end_time": "2020-06-30T23:25:31.263144Z",
+     "start_time": "2020-06-30T23:25:31.242411Z"
     }
    },
    "outputs": [],
@@ -339,8 +476,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.749269Z",
-     "start_time": "2020-06-19T16:44:52.701198Z"
+     "end_time": "2020-06-30T23:25:31.316816Z",
+     "start_time": "2020-06-30T23:25:31.264832Z"
     }
    },
    "outputs": [],
@@ -360,8 +497,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:52.777454Z",
-     "start_time": "2020-06-19T16:44:52.750613Z"
+     "end_time": "2020-06-30T23:25:31.355791Z",
+     "start_time": "2020-06-30T23:25:31.318494Z"
     }
    },
    "outputs": [],
@@ -382,8 +519,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:53.214185Z",
-     "start_time": "2020-06-19T16:44:52.779161Z"
+     "end_time": "2020-06-30T23:25:31.773401Z",
+     "start_time": "2020-06-30T23:25:31.356780Z"
     }
    },
    "outputs": [],
@@ -396,8 +533,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:53.396332Z",
-     "start_time": "2020-06-19T16:44:53.216108Z"
+     "end_time": "2020-06-30T23:25:31.950102Z",
+     "start_time": "2020-06-30T23:25:31.774927Z"
     }
    },
    "outputs": [],
@@ -417,8 +554,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:53.937352Z",
-     "start_time": "2020-06-19T16:44:53.397781Z"
+     "end_time": "2020-06-30T23:25:32.429977Z",
+     "start_time": "2020-06-30T23:25:31.951116Z"
     }
    },
    "outputs": [],
@@ -438,8 +575,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:54.577478Z",
-     "start_time": "2020-06-19T16:44:53.938825Z"
+     "end_time": "2020-06-30T23:25:33.035768Z",
+     "start_time": "2020-06-30T23:25:32.432049Z"
     }
    },
    "outputs": [],
@@ -452,8 +589,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:54.644922Z",
-     "start_time": "2020-06-19T16:44:54.578741Z"
+     "end_time": "2020-06-30T23:25:33.106698Z",
+     "start_time": "2020-06-30T23:25:33.037746Z"
     }
    },
    "outputs": [],
@@ -473,8 +610,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:54.690873Z",
-     "start_time": "2020-06-19T16:44:54.646190Z"
+     "end_time": "2020-06-30T23:25:33.163025Z",
+     "start_time": "2020-06-30T23:25:33.108117Z"
     }
    },
    "outputs": [],
@@ -510,8 +647,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:54.750667Z",
-     "start_time": "2020-06-19T16:44:54.693023Z"
+     "end_time": "2020-06-30T23:25:33.212324Z",
+     "start_time": "2020-06-30T23:25:33.164373Z"
     }
    },
    "outputs": [],
@@ -533,8 +670,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:54.771517Z",
-     "start_time": "2020-06-19T16:44:54.752078Z"
+     "end_time": "2020-06-30T23:25:33.230790Z",
+     "start_time": "2020-06-30T23:25:33.213660Z"
     }
    },
    "outputs": [],
@@ -555,8 +692,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-19T16:44:54.961814Z",
-     "start_time": "2020-06-19T16:44:54.772773Z"
+     "end_time": "2020-06-30T23:25:33.411012Z",
+     "start_time": "2020-06-30T23:25:33.232194Z"
     }
    },
    "outputs": [],
