--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -415,6 +415,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Feature: Rewriting property dictionaries\n",
+    "\n",
+    "`cf_xarray` will rewrite the `.sizes` and `.chunks` dictionaries so that one can index by a special CF axis or coordinate name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.cf.sizes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the duplicate entries above:\n",
+    "\n",
+    "1. One for `X`, `Y`, `T`\n",
+    "2. and one for `longitude`, `latitude` and `time`.\n",
+    "\n",
+    "An error is raised if there are multiple `'X'` variables (for example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "multiple.cf.sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiple.v1.cf.sizes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Feature: Rewriting arguments\n",
     "\n",
     "`cf_xarray` can rewrite arguments for a large number of xarray functions. By this I mean that instead of specifing say `dim=\"lon\"`, you can pass `dim=\"X\"` or `dim=\"longitude\"` and `cf_xarray` will rewrite that to `dim=\"lon\"` based on the attributes present in the dataset. \n",
@@ -637,9 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### miscellaneous features\n",
-    "\n",
-    "You can mix \"special names\" and variable names"
+    "## Feature: mix \"special names\" and variable names"
    ]
   },
   {
